--- a/article-service.properties
+++ b/article-service.properties
@@ -4,3 +4,7 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.application.name=article-service
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.instance-id=${spring.cloud.client.hostname}:${spring.application.name}:${random.long(10000,99999)}
